// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot 1`] = `
"<main className=\\"container customScroll\\">
  <header className=\\"header\\" onClick={[Function: onClick]}>
    <SvgTv fill=\\"#9E56FC\\" height=\\"40px\\" width=\\"40px\\" />
    <h1>
      <b>
        What
      </b>
       To Watch
    </h1>
    <a href=\\"https://www.themoviedb.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" className=\\"logo\\">
      <SvgMoviedbSmall height=\\"50px\\" width=\\"50px\\" />
    </a>
  </header>
  <Connect(SearchForm) />
  <h2 className=\\"subtitle\\">
    <span>
      Results
    </span>
  </h2>
  <div className=\\"noResults\\">
    <p>
      No results
    </p>
    <button className=\\"btn btn--primary btn--big\\" onClick={[Function: getTrendingShows]}>
      Show Trending
    </button>
  </div>
  <Connect(Bookmarks) />
</main>"
`;

exports[`<App /> should match snapshot with searchRsults props 1`] = `
"<main className=\\"container customScroll\\">
  <header className=\\"header\\" onClick={[Function: onClick]}>
    <SvgTv fill=\\"#9E56FC\\" height=\\"40px\\" width=\\"40px\\" />
    <h1>
      <b>
        What
      </b>
       To Watch
    </h1>
    <a href=\\"https://www.themoviedb.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" className=\\"logo\\">
      <SvgMoviedbSmall height=\\"50px\\" width=\\"50px\\" />
    </a>
  </header>
  <Connect(SearchForm) />
  <h2 className=\\"subtitle\\">
    <span>
      Results
    </span>
  </h2>
  <Connect(SearchResults) />
  <Connect(Bookmarks) />
</main>"
`;
